--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@react-pdf-viewer/core": "^2.8.0",
+    "@react-pdf-viewer/default-layout": "^2.8.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -12,8 +14,11 @@
     "@types/node": "^12.20.23",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
+    "pdfjs-dist": "^2.6.347",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-pdf": "^5.3.2",
+    "react-pdf-highlighter": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.2",
     "web-vitals": "^1.1.2"
