--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.0.0",
     "@react-pdf-viewer/core": "^2.8.0",
     "@react-pdf-viewer/default-layout": "^2.8.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -17,7 +20,6 @@
     "pdfjs-dist": "^2.6.347",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-pdf": "^5.3.2",
     "react-pdf-highlighter": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.2",
