--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@mui/material": "^5.0.0",
+    "@mdi/js": "^6.1.95",
+    "@mdi/react": "^1.5.0",
+    "@mui/icons-material": "^5.0.0",
+    "@mui/material": "^5.0.0-rc.1",
+    "@mui/styles": "^5.0.0",
     "@react-pdf-viewer/core": "^2.8.0",
     "@react-pdf-viewer/default-layout": "^2.8.0",
     "@testing-library/jest-dom": "^5.14.1",
