--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^12.20.23",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
+    "material-ui-image": "^3.3.2",
     "pdfjs-dist": "^2.6.347",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
