--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,3 +15,29 @@ server {
   }
 
 }
+
+server {
+
+  listen 443 ssl http2;
+  server_name localhost;
+  ssl_certificate     /usr/share/nginx/ssl/ssl.pem ;
+  ssl_certificate_key  /usr/share/nginx/ssl/ssl.key ;
+  ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
+  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+  ssl_prefer_server_ciphers on;
+  charset utf-8;
+  client_max_body_size 10M;
+
+  location / {
+    root   /usr/share/nginx/html;
+    index  index.html index.htm;
+    try_files $uri $uri/ /index.html;
+  }
+
+  error_page   500 502 503 504  /50x.html;
+
+  location = /50x.html {
+    root   /usr/share/nginx/html;
+  }
+
+}
