Add logs to nginx.conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -41,3 +41,8 @@ server {
   }
 
 }
+
+  access_log /var/log/nginx/access.log main;
+  error_log /var/log/nginx/error.log warn;
+
+  server_tokens off;
