--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -21,6 +21,7 @@ RUN npm run build
 # production environment
 FROM nginx:stable-alpine
 COPY --from=build /app/build /usr/share/nginx/html
+COPY --from=build /app/nginx/ssl /usr/share/nginx/ssl
 COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80 443
 CMD ["nginx", "-g", "daemon off;"]
