--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -28,6 +28,10 @@ server {
   charset utf-8;
   client_max_body_size 10M;
 
+  location /pdf {
+    alias /usr/share/nginx/html/pdf;
+   }
+
   location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
