--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -28,4 +28,4 @@ COPY --from=build /app/build /usr/share/nginx/html
 COPY --from=build /app/nginx/ssl /usr/share/nginx/ssl
 COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80 443
-CMD ["nginx"]
+CMD ["nginx", "-g", "daemon off;"]
